Fix handling of RTKQ_IM_HW quirk, the check was inverted.

Found by tho@useless-ficus.net, thanks.
Fixes PR/53858.